Добавлена валидация полей + поля в update
