# internal/handler/dto.go
@@ -10,9 +10,12 @@ type CreatePersonRequest struct {
 }
 
 type UpdatePersonRequest struct {
-	Name       *string `json:"name"`
-	Surname    *string `json:"surname"`
-	Patronymic *string `json:"patronymic"`
+	Name        *string `json:"name"`
+	Surname     *string `json:"surname"`
+	Patronymic  *string `json:"patronymic"`
+	Age         *int    `json:"age"`
+	Gender      *string `json:"gender"`
+	Nationality *string `json:"nationality"`
 }
 
 type PersonResponse struct {
